--- a/cat-maven-plugin/pom.xml
+++ b/cat-maven-plugin/pom.xml
@@ -33,5 +33,10 @@
 			<groupId>org.unidal.framework</groupId>
 			<artifactId>foundation-service</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+			<version>3.3</version>
+		</dependency>
 	</dependencies>
 </project>
